testdata/baselines/reference/submodule/conformance/iterableArrayPattern26.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iterableArrayPattern26.ts(1,33): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
iterableArrayPattern26.ts(1,34): error TS2339: Property '0' does not exist on type '{}'.
iterableArrayPattern26.ts(1,44): error TS2339: Property '1' does not exist on type '{}'.
iterableArrayPattern26.ts(2,25): error TS2583: Cannot find name 'Map'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iterableArrayPattern26.ts (4 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                                     ~~~~~~~~
!!! error TS2339: Property '0' does not exist on type '{}'.
                                               ~~~~~~~~
!!! error TS2339: Property '1' does not exist on type '{}'.
    takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));
                            ~~~
!!! error TS2583: Cannot find name 'Map'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.